--- a/src/Link5.Api/appsettings.json
+++ b/src/Link5.Api/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "PostgresConnection": "Server=localhost;Port=15432;Database=link5;User Id=postgres;Password=postgres;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
